Fix class name of stretched-link

--- a/scss/helpers/stretched-link.scss
+++ b/scss/helpers/stretched-link.scss
@@ -1,4 +1,4 @@
-.streched-link {
+.stretched-link {
   &::after {
     content: "";
     position: absolute;
